# enc_file

./: .gitignore  Cargo.toml  Cargo.toml.crpt  GUI_DESIGN.md  GUI_SCREENSHOT.md  LICENSE  README.md  build_gui.sh  cargo.toml.crpt  deny.toml  file  file.key  key-file  key.test  readme.md  small.txt  test.enc
.github/workflows/: cargo-deny.yml  codeql.yml  deploy.yml  devskim.yml  rust-clippy.yml  rust.yml  security-audit.yml
proptest-regressions/: lib.txt
src/: armor.rs  crypto.rs  file.rs  format.rs  gui_main.rs  hash.rs  kdf.rs  keymap.rs  lib.rs  lib_new.rs  main.rs  streaming.rs  types.rs
src/gui/: app.rs  mod.rs  operations.rs  progress.rs  widgets.rs
tests/: adaptive_chunking.rs  adaptive_sizing_cli.rs  adaptive_sizing_validation.rs  armor.rs  chunk_limits.rs  cli_flags_encrypt_decrypt.rs  cli_hash.rs  dec_overwrite.rs  edge_cases.rs  file_io.rs  hash.rs  hash_algs.rs  hash_keyed.rs  kdf_hardening.rs  no_plain_chunks.proptest-regressions  no_plain_chunks.rs  performance_baseline.rs  security_validation.rs  stream_header_checks.rs  stream_roundtrip.rs  streaming.rs  tamper.rs  zeroization.rs
