[package]
name = "enc_file"
version = "0.4.10"
authors = ["LazyEmpiricist <35100899+LazyEmpiricist@users.noreply.github.com>"]
edition = "2021"
description = "Encrypt / decrypt files or calculate hash from the command line. Warning: Don't use for anything important, use VeraCrypt or similar instead."
readme = "README.md"
homepage = "https://docs.rs/enc_file/"
documentation = "https://docs.rs/enc_file/"
repository = "https://github.com/LazyEmpiricist/enc_file"
keywords = ["encryption", "command-line", "chacha20poly1305", "aes-gcm", "blake3"]
categories = ["command-line-utilities", "cryptography", "encoding", "filesystem"]
license = "MIT"

[lib]
name = "enc_file"
path = "src/lib.rs"

[[bin]]
name = "enc_file"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1" 
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
bincode = "1.3.3"
blake3 = { version = "1.5.1", features = ["rayon"] }
sha2 = "0.10.8"
sha3 = "0.10.8"