[package]
name = "enc_file"
version = "0.5.13"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Password-based file encryption tool with a versioned header, AEAD, Argon2id KDF, and streaming mode. Library + CLI."
homepage = "https://crates.io/crates/enc_file"
documentation = "https://docs.rs/enc_file/latest/enc_file/"
repository = "https://github.com/ArdentEmpiricist/enc_file"
keywords = [
    "encryption",
    "command-line",
    "chacha20poly1305",
    "aes-gcm",
    "blake3",
]
categories = [
    "command-line-utilities",
    "cryptography",
    "encoding",
    "filesystem",
]

[lib]
name = "enc_file"
path = "src/lib.rs"

[[bin]]
name = "enc-file"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"

# Crypto
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std", "stream"] }
aes-gcm-siv = "0.11"
aead = "0.5"

# OS randomness
getrandom = "0.3.3"

# Secrets & hygiene
secrecy = "0.10"
zeroize = "1"

# CLI & errors
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1"

# I/O ergonomics
rpassword = "7"
tempfile = "3"

# Hashing (utility subcommand)
blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc = "3"

# Armor (Base64)
base64 = "0.22"

# Hex CLI input
hex = "0.4"

# CPU detection for KDF parallelism defaults
num_cpus = "1"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
assert_fs = "1"
tempfile = "3"
rand = { version = "0.9.2", features = ["std"] }
predicates = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
